<resources>

    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>

    <string name="no_connection">Can\'t connect. Check your connection.</string>
    <string name="error_message">Couldn\'t load data. Please try again.</string>

    <string name="action_sortByMostPopular">Most Popular</string>
    <string name="action_sortByHighestRated">Highest Rated</string>
    <string name="action_sortByFavorites">Favorites</string>

    <string name="movie_thumbnail_description">Movie Thumbnail</string>
    <string name="movie_poster_description">Movie Poster</string>

    <string name="title">Title:</string>
    <string name="rating">Avg. Rating:</string>
    <string name="summary">Summary:</string>
    <string name="release_date">Release Date:</string>
    <string name="trailer">Trailers:</string>
    <string name="reviews">Reviews:</string>

    <string name="content_desc">Image</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>

</resources>
